# HomeServer

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  TODO.md  TODO.txt  compile_commands.json  copy_project.sh  docker-compose.yml  package-lock.json  project_copy.txt  run_docker.sh  start.sh
.github/actions/setup-siblings/: action.yml
.github/workflows/: ci.yml  http_manager_it_tests.yml
app/include/: contract_version.h  server_settings.h
app/include/browser/: browser.h  http_manager.h  router.h
app/include/browser/handlers/: handler_drive.h  handler_static.h  handler_utils.h  handler_whoami.h  handlers.h  handlers_int.h  handlers_interface.h
app/include/browser/router/: route_register.h  router.h
app/include/core/: client_manager.h  config.h  config_core.h  core.h  listener.h  logger.h  new.h  pipeline.h  reactor.h  server_settings.h  socket_helper.h  worker.h
app/include/core/listener/: listener.h
app/include/core/worker/: client.h  dispatcher.h  operator.h  worker.h
app/include/db_server/core/: config.h  config_core.h  core.h  reactor.h
app/include/db_server/utils/: affinity.h  epoller.h  socket_helper.h  time_helper.h
app/include/utils/: epoller.h  server_settings.h  socket_helper.h  time_helper.h
app/src/: main.c
app/src/browser/: browser.c  http_manager.c  router.c
app/src/browser/handlers/: handler_db.c  handler_drive.c  handler_expenses.c  handler_static.c  handler_utils.c  handler_whoami.c
app/src/browser/router/: route_register.c  router.c
app/src/core/: client_manager.c  core.c  listener.c  logger.c  pipeline.c  reactor.c  socket_helper.c  worker.c
app/src/core/browser/: browser.c  http_manager.c
app/src/core/listener/: listener.c  sd_activation.c
app/src/core/worker/: client.c  dispatcher.c  operator.c  (+2 more)
app/src/utils/: affinity.c  epoller.c  socket_helper.c  time_helper.c
browser/inc/: browser.h  handlers.h  http_manager.h  router.h  static_page.h
browser/src/: browser.c  handlers.c  http_manager.c  router.c  static_page.c
build_dbg/: CMakeCache.txt  Makefile  cmake_install.cmake
build_dbg/lib/: libemlog.so.1  libemlog.so.1.0.0
contract/: manifest.json
contract/endpoints/: database_auth.json  whoami.json
contract/schemas/: auth.login.response.json  auth.register.request.json  database.auth.placeholder.json  whoami.response.json
docker/: Dockerfile
docker/nginx/: default.conf
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: AppShell.jsx  index.css  main.jsx  theme.js
frontend/src/animations/: cat.css
frontend/src/api/: auth.js  client.js  db.js  mockServer.js
frontend/src/auth/: AuthContext.jsx
frontend/src/components/: EmailField.jsx  Footer.jsx  Header.jsx  Nav.jsx  ThemeToggle.jsx
frontend/src/contract/: ContractContext.jsx
frontend/src/crypto/: deviceKey.js  proof.js
frontend/src/routes/: Drive.jsx  Expenses.jsx  Home.jsx  Login.jsx  Test.jsx
frontend/src/styles/: expenses.css  main.css
frontend/src/utils/: email.js
inc/: client.h  core.h  listener.h  logger.h  server_input.h  server_settings.h
include/browser/: browser.h  handlers.h  http_manager.h  router.h  static_page.h
include/browser/handlers/: handler_expenses.h  handler_static_page.h  handler_utils.h  handlers.h
include/clients/: client.h  client_manager.h
include/core/: client.h  client_manager.h  core.h  listener.h  logger.h  server_input.h  server_settings.h  worker.h
include/worker/: client.h
libraries/cjson/: cJSON.h
libraries/llhttp/: llhttp.h
my-frontend/: package-lock.json  package.json
my-frontend/src/: App.jsx
nginxConfigs/: README.MD  STEP_BY_STEP.MD  nginx.conf
nginx_configs/: bkp.conf
src/: client.c  core.c  listener.c  logger.c  main.c  server.c  server_input.c
src/browser/: browser.c  handlers.c  http_manager.c  router.c  static_page.c
src/browser/handlers/: handler_drive.c  handler_expenses.c  handler_static.c  handler_static_page.c  handler_utils.c  handler_whoami.c
src/clients/: client.c  client_manager.c
src/core/: client.c  core.c  listener.c  logger.c  server.c  server_input.c  worker.c
src/worker/: client_manager.c
tests/: exceed_max_connections.sh  exceed_max_connections_parallel.sh  general_test.sh  spsc_dispatch_load_test.sh
tests/IT/: CMakeLists.txt  IT_http_man.c  http_man_test_utils.c  http_man_test_utils.h
tests/IT/time/: IT_http_man_time.c
tests/worker/: operator_lifecycle_tests.c  response_writer_parking_tests.c
utils/: Commands.md  build.sh  build_bin.sh  build_dbg.sh  build_deb.sh  build_standalone.sh  build_tests.sh  deps.sh  gen_contract_header.sh  run.sh  run_dbg.sh  run_pipeline.sh  run_standalone.sh
utils/DeployUtils/: deploy_contents.sh  deploy_executable.sh
utils/MemoryTests/: memcheck_short.sh
utils/NetworkUtils/: connect_11_times.sh  connect_11_with_msg.sh  watch_port.sh
utils/deploy/: build_frontend.sh  deploy.sh  deploy_backend.sh  deploy_frontend.sh
utils/tests/: run.sh  run_timing  run_timing.sh
var/build_notes/: load-notes.js
var/build_notes/notes/: getaddrinfo.md  intro.md  listener_start.md  socket_fundamentals.md
var/lib/expenses/: settings.json
var/www/: map.json  routes.json
var/www/assets/: boot.js  expenses_style.css  footer.js  header.html  header.js  navigation.js  style.css  theme.js
var/www/build_notes/: index.html  manifest.json
var/www/pages/: dynamic.html  expenses.html  index.html
var/www/views/: drive.html  drive.js  dynamic.html  expenses.html  expenses.js  home.js  index.html  party.js  trial.js  whoami.html  whoami.js
www/: drive.html  dynamic.html  expenses.html  index.html  style.css  whoami.html
www/assets/: footer.html  header.html  header.js
www/build_notes/: index.html  load-notes.js  manifest.json
www/build_notes/diagrams/: accept_connecting_socket.puml  example.puml  expenses.puml  start_listener.puml
www/build_notes/notes/: expenses.md  getaddrinfo.md  intro.md  listener_start.md  login_flow.md  socket_fundamentals.md
www/expenses/2024/: 01.json  02.json
www/expenses/2025/: 01.json
(+84 files in other folders)
